--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "babel-core": "^6.26.3",
     "register-service-worker": "^1.0.0",
-    "vue": "^2.5.17"
+    "vue": "^2.5.17",
+    "vue-simple-calendar": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.1",
