--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "babel-core": "^6.26.3",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
+    "vue-js-modal": "^1.3.25",
     "vue-simple-calendar": "^4.0.2"
   },
   "devDependencies": {
