--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
     "vue-js-modal": "^1.3.25",
+    "vue-router": "^3.0.1",
     "vue-simple-calendar": "^4.0.2"
   },
   "devDependencies": {
