--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@okta/okta-vue": "^1.0.0",
     "babel-core": "^6.26.3",
     "register-service-worker": "^1.0.0",
     "vue": "^2.5.17",
