--- a/package.json
+++ b/package.json
@@ -8,9 +8,16 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@okta/jwt-verifier": "0.0.11",
     "@okta/okta-vue": "^1.0.0",
+    "axios": "^0.18.0",
     "babel-core": "^6.26.3",
+    "cors": "^2.8.4",
+    "epilogue": "^0.7.1",
+    "express": "^4.16.3",
     "register-service-worker": "^1.0.0",
+    "sequelize": "^4.37.6",
+    "sqlite3": "^4.0.2",
     "vue": "^2.5.17",
     "vue-js-modal": "^1.3.25",
     "vue-router": "^3.0.1",
